# CretopDataReader

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
docs/: packaging-boundary.md
electron/: main.js  ppt-forger-data.js  ppt-forger-gemini.js  ppt-forger.js  preload.js  resource-manager.js  runtime-check.js
electron/renderer/: app-init.js  app.js  index.html  styles.css  ui-assets.css
scripts/: build-python-worker.js  build-release-resources.js
src/cretop_data_reader/: app.py  network_logger.py  table_capture.py
src/maxawon/: app.py  browser_recovery.py  network_logger.py  table_capture.py  worker.py
src/weekly_mezz/: cli.py  dart.py  export.py  gui.py  html_bond_parser.py  kind.py  settings.py  toc.py
templates/Deal_Summary_Template_1.0/: README.md
tests/: resource-manager.test.js  runtime-check.test.js  test_network_logger.py  test_table_capture.py  test_weekly_mezz_export.py  test_weekly_mezz_html_parser.py  test_weekly_mezz_parallel.py  test_weekly_mezz_toc.py
